<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesson_21.homework_21.UnoActivity"
    android:layout_margin="8dp">

    <Button
        android:id="@+id/bHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/say_hello"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>
    <Button
        android:id="@+id/bCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>
    <TextView
        android:id="@+id/show_count"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/count_initial_value"
        android:textSize="70sp"
        android:background="@color/yellow"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/bHello"
        app:layout_constraintBottom_toTopOf="@+id/bCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>