<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lesoon_22homework.ExampleActivity">

    <Button
        android:id="@+id/bCount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="368dp"
        android:text="@string/button_label_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/count_initial_value"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/bCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bCount"
        app:layout_constraintStart_toStartOf="@+id/bCount"
        app:layout_constraintTop_toBottomOf="@+id/bCount"
        app:layout_constraintVertical_bias="0.077" />

</androidx.constraintlayout.widget.ConstraintLayout>